--- a/app/views/rails_samples/posts/index.html.erb
+++ b/app/views/rails_samples/posts/index.html.erb
@@ -1,2 +1,26 @@
-<h1>RailsSamples::Posts#index</h1>
-<p>Find me in app/views/rails/posts/index.html.erb</p>
+<div class="container mx-auto">
+  <h1 class="text-2xl font-bold mb-4">Posts</h1>
+  <%= link_to 'New Post', new_rails_samples_post_path, class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-4 inline-block' %>
+  <table class="table-auto w-full">
+    <thead>
+      <tr>
+        <th class="px-4 py-2">Title</th>
+        <th class="px-4 py-2">Content</th>
+        <th class="px-4 py-2">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @posts.each do |post| %>
+        <tr>
+          <td class="border px-4 py-2"><%= post.title %></td>
+          <td class="border px-4 py-2"><%= post.content %></td>
+          <td class="border px-4 py-2">
+            <%= link_to 'Show', rails_samples_post_path(post), class: 'bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded inline-block' %>
+            <%= link_to 'Edit', edit_rails_samples_post_path(post), class: 'bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded inline-block' %>
+            <%= link_to 'Destroy', rails_samples_post_path(post), data: { turbo_method: :delete, turbo_confirm: t("confirm") }, class: 'bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded inline-block' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
