:recycle: Integrate Turbo and Stimulus into Hotwired

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,8 +35,7 @@
       <li class="text-gray-700"><%= t('home.frontend') %>
         <ul class="list-disc list-inside ml-4">
           <li class="text-gray-700">TypeScript</li>
-          <li class="text-gray-700">Turbo</li>
-          <li class="text-gray-700">Stimulus</li>
+          <li class="text-gray-700">Hotwired</li>
           <li class="text-gray-700">Tailwind CSS</li>
         </ul>
       </li>
