--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,9 +1,9 @@
-<div class="h-full px-3 py-4 overflow-y-auto bg-gray-200">
+<div class="h-full px-3 py-4 overflow-y-auto bg-white">
   <ul class="space-y-2">
     <% if sidebar_items.present? %>
       <% sidebar_items.each do |item| %>
         <li>
-          <%= link_to item[:name], item[:url], class: "flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700" %>
+          <%= link_to item[:name], item[:url], class: "flex items-center p-2 text-base font-normal text-gray-900 rounded-lg hover:bg-gray-200" %>
         </li>
       <% end %>
     <% end %>
