--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,16 +7,16 @@
         </div>
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
-            <%= link_to "Home", root_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
-            <%= link_to "Rails", rails_samples_root_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
-            <%= link_to "Tailwind CSS", tailwind_samples_root_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
-            <%= link_to "Hotwired", hotwired_samples_root_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
+            <%= link_to "Home", root_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium #{current_page?(root_path) ? 'active' : ''}" %>
+            <%= link_to "Rails", rails_samples_root_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium #{request.fullpath.start_with?(rails_samples_root_path) ? 'active' : ''}" %>
+            <%= link_to "Tailwind CSS", tailwind_samples_root_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium #{request.fullpath.start_with?(tailwind_samples_root_path) ? 'active' : ''}" %>
+            <%= link_to "Hotwired", hotwired_samples_root_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium #{request.fullpath.start_with?(hotwired_samples_root_path) ? 'active' : ''}" %>
           </div>
         </div>
       </div>
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-        <%= link_to "日本語", url_for(locale: :ja), class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
-        <%= link_to "English", url_for(locale: :en), class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
+        <%= link_to "日本語", url_for(locale: :ja), class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium #{I18n.locale.to_s == 'ja' ? 'active' : ''}" %>
+        <%= link_to "English", url_for(locale: :en), class: "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium #{I18n.locale.to_s == 'en' ? 'active' : ''}" %>
       </div>
     </div>
   </div>
